Fix event queue